--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -4,112 +4,135 @@
     <h4>You do not have the permission to access this page</h4>
   </div>
 {{else}}
-  {{#power-select
-    data-test-project-selection
-    tagName="div"
-    class="header"
-    options=projects
-    placeholder="Select project..."
-    searchField="name"
-    onchange=(action (queue (action (mut selectedProject)) (perform fetchTasksOfProject)))
-    selected=selectedProject
-    allowClear=true
-    as |project|
-  }}
-    {{project.name}}
-  {{/power-select}}
-  {{#if selectedProject}}
-    <h3>
-      <span class="header-left">
-        Tasks of {{selectedProject.name}}
-      </span>
-      <span class="header-right">
-        <button class="btn btn-primary" {{action (perform createTask)}} data-test-add-task>Add Task</button>
-      </span>
-    </h3>
-    <div class="task-table-container">
-      {{#ember-scrollable class='projects-scrollable-container'}}
-        <table class="table table--striped table--projects" data-test-tasks-table>
-          <thead>
-          <tr>
-            <th>Name</th>
-            <th>Reference</th>
-            <th>Estimated time</th>
-            <th>Archived</th>
-          </tr>
-          </thead>
-          <tbody>
-          {{#each tasks as |task|}}
-            <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}} data-test-task-table-row>
-              <td data-test-table-name>{{task.name}}</td>
-              <td data-test-table-reference>{{if task.reference task.reference "-"}}</td>
-              <td data-test-table-estimated-time>{{if task.estimatedTime (humanize-duration task.estimatedTime) "-"}}</td>
-              <td>{{sy-checkmark data-test-table-archived checked=task.archived}}</td>
-            </tr>
-          {{/each}}
-          </tbody>
-        </table>
-      {{/ember-scrollable}}
+  {{#if loading}}
+    <div class="empty">
+      {{loading-icon}}
     </div>
-    {{#if selectedTask}}
-      <div class="task-form-container" data-test-task-form>
-      <h2>{{if selectedTask.isNew "Add task" selectedTask.name}}</h2>
-        {{#validated-form
-          model     = (changeset selectedTask TaskValidations)
-          on-submit = (perform saveTask)
-        as |f|}}
-          <div class="task-form-container-row">
-            <div class="task-form-container-column">
-              {{f.input
-                data-test-name
-                label="Name"
-                name="name"
-                required=true
-              }}
-              {{f.input
-                data-test-reference
-                label="Reference"
-                name="reference"
-                required=false
-              }}
-            </div>
-            <div class="task-form-container-column">
-              {{#f.input name='estimatedTime' as |fi|}}
-                <label>
-                  Estimated time
-                </label>
-                {{sy-durationpicker
-                  data-test-estimated-time
-                  value=fi.value
-                  on-change=fi.update
+  {{else}}
+    <div class="header">
+      {{#power-select
+        data-test-customer-selection
+        tagName="div"
+        class="header-item"
+        options=customers
+        placeholder="Select customer..."
+        searchField="name"
+        onchange=(action (queue (action (mut selectedCustomer)) (perform filterProjects)))
+        selected=selectedCustomer
+        allowClear=true
+      as |customer|
+      }}
+        {{customer.name}}
+      {{/power-select}}
+      {{#power-select
+        data-test-project-selection
+        tagName="div"
+        class="header-item"
+        options=filteredProjects
+        placeholder="Select project..."
+        searchField="name"
+        onchange=(action (queue (action (mut selectedProject)) (perform fetchTasksOfProject)))
+        selected=selectedProject
+        allowClear=true
+        disabled=(not selectedCustomer)
+      as |project|
+      }}
+        {{project.name}}
+      {{/power-select}}
+    </div>
+    {{#if selectedProject}}
+      <h3>
+        <span class="header-left">
+          Tasks of {{selectedProject.name}}
+        </span>
+        <span class="header-right">
+          <button class="btn btn-primary" {{action (perform createTask)}} data-test-add-task>Add Task</button>
+        </span>
+      </h3>
+      <div class="task-table-container">
+        {{#ember-scrollable class='projects-scrollable-container'}}
+          <table class="table table--striped table--projects" data-test-tasks-table>
+            <thead>
+            <tr>
+              <th>Name</th>
+              <th>Reference</th>
+              <th>Estimated time</th>
+              <th>Archived</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each tasks as |task|}}
+              <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}} data-test-task-table-row>
+                <td data-test-table-name>{{task.name}}</td>
+                <td data-test-table-reference>{{if task.reference task.reference "-"}}</td>
+                <td data-test-table-estimated-time>{{if task.estimatedTime (humanize-duration task.estimatedTime) "-"}}</td>
+                <td>{{sy-checkmark data-test-table-archived checked=task.archived}}</td>
+              </tr>
+            {{/each}}
+            </tbody>
+          </table>
+        {{/ember-scrollable}}
+      </div>
+      {{#if selectedTask}}
+        <div class="task-form-container" data-test-task-form>
+          <h2>{{if selectedTask.isNew "Add task" selectedTask.name}}</h2>
+          {{#validated-form
+            model     = (changeset selectedTask TaskValidations)
+            on-submit = (perform saveTask)
+          as |f|}}
+            <div class="task-form-container-row">
+              <div class="task-form-container-column">
+                {{f.input
+                  data-test-name
+                  label="Name"
+                  name="name"
+                  required=true
                 }}
-              {{/f.input}}
+                {{f.input
+                  data-test-reference
+                  label="Reference"
+                  name="reference"
+                  required=false
+                }}
+              </div>
+              <div class="task-form-container-column">
+                {{#f.input name='estimatedTime' as |fi|}}
+                  <label>
+                    Estimated time
+                  </label>
+                  {{sy-durationpicker
+                    data-test-estimated-time
+                    value=fi.value
+                    on-change=fi.update
+                  }}
+                {{/f.input}}
 
-              {{#f.input data-test-archived name='archived' as |fi|}}
-                <label>
-                  Archived
-                </label>
-                {{sy-checkbox
-                  checked=selectedTask.archived
-                  value=fi.value
-                  on-change=fi.update
-                }}
-              {{/f.input}}
+                {{#f.input data-test-archived name='archived' as |fi|}}
+                  <label>
+                    Archived
+                  </label>
+                  {{sy-checkbox
+                    checked=selectedTask.archived
+                    value=fi.value
+                    on-change=fi.update
+                  }}
+                {{/f.input}}
+              </div>
             </div>
-          </div>
-          <div class="btn-toolbar btn-toolbar--right">
-            <button class="btn btn-primary" {{action (mut selectedTask) null}} data-test-cancel>Cancel</button>
-            {{f.submit data-test-save disabled=f.model.isInvalid}}
-          </div>
-        {{/validated-form}}
+            <div class="btn-toolbar btn-toolbar--right">
+              <button class="btn btn-primary" {{action (mut selectedTask) null}} data-test-cancel>Cancel</button>
+              {{f.submit data-test-save disabled=f.model.isInvalid}}
+            </div>
+          {{/validated-form}}
+        </div>
+      {{/if}}
+    {{else}}
+      <div class="empty" data-test-none-selected>
+        <div>
+          {{fa-icon 'search'}}
+          <h3>Please select a customer and a project</h3>
+        </div>
       </div>
     {{/if}}
-  {{else}}
-    <div class="empty" data-test-no-project-selected>
-      <div>
-        {{fa-icon 'search'}}
-        <h3>No project selected</h3>
-      </div>
-    </div>
   {{/if}}
 {{/if}}
