--- a/app/styles/projects.scss
+++ b/app/styles/projects.scss
@@ -1,7 +1,13 @@
 .header {
+  display: flex;
   border-bottom: 1px solid rgb(220, 220, 220);
   padding-bottom: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.header-item {
+  flex: 50%;
+  margin-right: 0.5rem;
 }
 
 .header-left {
