--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,7 @@
 /* Component styles */
 @import "components/date-navigation";
 @import "components/tracking-bar";
+@import "components/sy-calendar";
 
 html {
   hyphens: auto;
